cabal-version: 3.0
name: mach
version: 0.1.0.0
license: MIT
license-file: LICENSE
author: jrvieira
maintainer: github@jrvieira.com
build-type: Simple
extra-doc-files: CHANGELOG.md

common warnings
   ghc-options: -Wall

executable mach
   import: warnings
   main-is: Main.hs
-- other-modules:
-- other-extensions:
   build-depends: base ^>=4.17.0.0
      , gloss

   hs-source-dirs: app
   default-language: Haskell2010
   default-extensions: BangPatterns
      , ImportQualifiedPost
      , TupleSections
      , GADTs
      , StandaloneDeriving
      , ScopedTypeVariables
      , BinaryLiterals
--    , GeneralizedNewtypeDeriving
      , LexicalNegation
--    , OverloadedLists
--    , OverloadedStrings
      , TypeApplications
      , PartialTypeSignatures
